# CrossControl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CrossControlConfig.json  TODO.md  readme.md  stdout  vcpkg.json  widget.ui
.github/workflow/: ci-release.yml
.github/workflows/: ci-release.yml  ubuntu-release.yml
cmake/: Dependencies.cmake  Helper.cmake  Install.cmake  Output.cmake  Packaging.cmake  ProjectConfig.cmake  Sources.cmake  Targets.cmake
cmake/targets/: AudioVideo.cmake  Config.cmake  Connect.cmake  CrossControl.cmake  DeviceGateway.cmake  HumanRecognition.cmake  Logging.cmake  Storage.cmake
cmake/templates/: StorageConfig.h.in
docs/: HumanRecognition.md  dev-ubuntu.md  dev-windows.md  human_recognition_interface.md
include/logging/: logging.h
include/modules/AudioVideo/: audiovideo.h
include/modules/Config/: config.h
include/modules/Connect/: connect_factory.h  connect_wrapper.h  iface_connect.h  iface_connect_qt.h  mqtt_connect.h  serial_connect.h  tcp_connect.h  tcp_connect_qt.h  udp_connect.h
include/modules/DeviceGateway/: device_gateway.h  device_registry.h  devicegateway.h  rest_server.h
include/modules/HumanRecognition/: factory.h  humanrecognition.h  iface_human_recognition.h  ihumanrecognitionbackend.h  opencv_backend.h  types.h
include/modules/HumanRecognition/impl/opencv_dlib/: backend.h
include/modules/Storage/: dbmanager.h  storage.h
include/widgets/: actionmanager.h  connectwidget.h  crosscontrolwidget.h  deviceeditdialog.h  devicemanagementwidget.h  devicemanagementwidget.ui  facerecognitionwidget.h  httpopswidget.h  importexportcontrol.h  keyvalueeditor.h  loginwidget.h  logwidget.h  mainwidget.h  messagewidget.h  monitorwidget.h  serialopswidget.h  settingwidget.h  tcpopswidget.h  udpopswidget.h  unlockwidget.h  visitrecordwidget.h  weatherwidget.h
resources/: icons.qrc
resources/themes/: dark.qss  light.qss
scripts/: download_dlib_model.ps1  download_dlib_model.sh  format.ps1  format.sh  install_dlib.json  install_dlib.ps1  install_dlib.sh
src/: main.cpp
src/i18n/: CrossControl_zh_CN.ts
src/logging/: logging.cpp
src/modules/AudioVideo/: audiovideo.cpp
src/modules/Config/: config.cpp
src/modules/Connect/: connect_factory.cpp  iface_connect.cpp  mqtt_connect.cpp  serial_connect.cpp  tcp_connect.cpp  tcp_connect_qt.cpp  udp_connect.cpp
src/modules/DeviceGateway/: device_gateway.cpp  device_registry.cpp  devicegateway.cpp  rest_server.cpp
src/modules/HumanRecognition/: factory.cpp  humanrecognition.cpp  opencv_backend.cpp
src/modules/HumanRecognition/impl/opencv_dlib/: backend.cpp  backend_impl_core.cpp  backend_impl_recognition.cpp
src/modules/HumanRecognition/impl/opencv_dlib/internal/: backend_constants.h  backend_impl.h  backend_network.h
src/modules/Storage/: dbmanager.cpp  storage.cpp
src/widgets/: actionmanager.cpp  actionmanager.ui  connectwidget.cpp  crosscontrolwidget.cpp  crosscontrolwidget.ui  deviceeditdialog.cpp  devicemanagementwidget.cpp  devicemanagementwidget.ui  facerecognitionwidget.cpp  httpopswidget.cpp  httpopswidget.ui  importexportcontrol.cpp  keyvalueeditor.cpp  keyvalueeditor.ui  loginwidget.cpp  loginwidget.ui  logwidget.cpp  logwidget.ui  mainwidget.cpp  mainwidget.ui  messagewidget.cpp  messagewidget.ui  monitorwidget.cpp  monitorwidget.ui  serialopswidget.cpp  serialopswidget.ui  settingwidget.cpp  settingwidget.ui  tcpopswidget.cpp  tcpopswidget.ui  udpopswidget.cpp  udpopswidget.ui  unlockwidget.cpp  unlockwidget.ui  visitrecordwidget.cpp  visitrecordwidget.ui  weatherwidget.cpp  weatherwidget.ui
tests/: CMakeLists.txt
tests/humanrecognition/: backend_impl_tests.cpp  check_model_compat.cpp
